# jemallocator

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
benches/: roundtrip.rs
ci/: run.sh
jemalloc-ctl/: Cargo.toml  README.md
jemalloc-ctl/src/: arenas.rs  config.rs  error.rs  keys.rs  lib.rs  macros.rs  opt.rs  raw.rs  stats.rs  stats_print.rs  thread.rs
jemalloc-sys/: Cargo.toml  README.md  build.rs
jemalloc-sys/configure/: VERSION  configure
jemalloc-sys/src/: lib.rs
jemallocator/: Cargo.toml  README.md
jemallocator-global/: Cargo.toml  README.md
jemallocator-global/src/: lib.rs
jemallocator/benches/: roundtrip.rs
jemallocator/src/: lib.rs
jemallocator/tests/: background_thread_defaults.rs  background_thread_enabled.rs  malloctl.rs  smoke.rs  smoke_ffi.rs
src/: lib.rs
systest/: Cargo.toml
systest/src/: main.rs
tests/: background_thread_enabled.rs  ffi.rs  grow_in_place.rs  malloctl.rs  shrink_in_place.rs  smoke.rs  usable_size.rs
